Changed the feature background to size correctly and be readable on mobile

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -238,7 +238,7 @@ font header .navbar-default .navbar-nav li a:hover {
 	Feature Start
 --*/
 #feature {
-  background: url("../img/JumpingGirl.jpg");
+  background: url("../img/JumpingGirl.jpg") no-repeat;
   background-position: 50% 94px;
   width: 100%;
   display: block;
@@ -259,6 +259,13 @@ font header .navbar-default .navbar-nav li a:hover {
   backface-visibility: hidden;
   padding: 60px 0;
 }
+#feature .backgroundchange{
+}
+@media screen and (min-width: 487px) and (max-width: 1079px) {.backgroundchange}
+{
+  background: url("../img/JumpingGirl(blurred).jpg");
+}
+
 #feature:before{
   content: "";
   position: absolute;
@@ -266,12 +273,11 @@ font header .navbar-default .navbar-nav li a:hover {
   top: 0;
   bottom: 0;
   right: 0;
-  width: 100%;
+  background: linear-gradient(to right, rgba(72, 63, 104, 0.5) 0, rgba(255, 255, 255, 1) 60%, rgba(255, 255, 255, 0.97) 50%);
   height: 100%;
-  background: linear-gradient(to left, #8b86a3, #322e40);
-  opacity: 0.8;
+  width: 100%;
+  padding-left: 250px;
 }
-
 #feature h2 {
   font-size: 28px;
   font-weight: 600;
